<resources>
    <string name="app_name">HorizontalCalenderView2</string>
    <string name="med_info">Medicine Information</string>
    <string name="med_info_hint">Enter medicine name</string>
    <string name="Dose_info">Dosage Information</string>
    <string name="custom_dose">Custom Dosage</string>
    <string name="reminders">Reminder(s)</string>
    <string name="time_select">Select Time</string>
    <string name="time_add">Add Time</string>
    <string name="additional_info">Additional Information</string>
    <string name="start_date_choose">Choose a start date</string>
    <string name="end_date_choose">Choose a end date</string>
    <string name="end_date_select">Select a Date(Optional)</string>
    <string name="canceling_reminder_alert_tile"> Cancel Reminder?</string>
    <string name="required">Please enter a value</string>
    <string name="canceling_reminder_alert_message">Are you sure you want to cancel this reminder?</string>
    <string name="deleting_reminder_alert_message">This is irreversible, and will remove\n all history. Are you sure you want to delete this reminder?</string>
    <string name="deleting_reminder_alert_tile"> Delete Reminder?</string>
    <string name="add_reminder">Create a Reminder</string>
    <string name="edit_reminder">Edit a Reminder</string>

    <string-array name="dose_quantities">
        <item>mg</item>
        <item>cc</item>
        <item>ml</item>
        <item>gr</item>
        <item>tbsp</item>
        <item>tsp</item>
        <item>drops</item>
        <item>squeezes</item>
        <item>pieces</item>
        <item>none</item>
    </string-array>
</resources>
